@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.opentripplanner.test.support.PolylineAssert.assertThatPolylinesAreEqual;
 
-import io.micrometer.core.instrument.Metrics;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneId;
@@ -16,9 +15,11 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.locationtech.jts.geom.Coordinate;
+import org.opentripplanner.TestOtpModel;
+import org.opentripplanner.TestServerContext;
+import org.opentripplanner.ext.fares.FaresFilter;
 import org.opentripplanner.ext.flex.trip.FlexTrip;
 import org.opentripplanner.ext.flex.trip.ScheduledDeviatedTrip;
-import org.opentripplanner.model.FlexStopLocation;
 import org.opentripplanner.model.GenericLocation;
 import org.opentripplanner.model.StopTime;
 import org.opentripplanner.model.plan.Itinerary;
@@ -30,14 +31,16 @@ import org.opentripplanner.routing.core.Money;
 import org.opentripplanner.routing.core.RoutingContext;
 import org.opentripplanner.routing.core.State;
 import org.opentripplanner.routing.core.TemporaryVerticesContainer;
-import org.opentripplanner.routing.core.WrappedCurrency;
+import org.opentripplanner.routing.fares.FareService;
 import org.opentripplanner.routing.framework.DebugTimingAggregator;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graphfinder.NearbyStop;
 import org.opentripplanner.routing.location.StreetLocation;
-import org.opentripplanner.standalone.config.RouterConfig;
-import org.opentripplanner.standalone.server.Router;
+import org.opentripplanner.standalone.api.OtpServerContext;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.model.site.FlexStopLocation;
+import org.opentripplanner.transit.service.DefaultTransitService;
+import org.opentripplanner.transit.service.TransitModel;
 import org.opentripplanner.util.OTPFeature;
 import org.opentripplanner.util.PolylineEncoder;
 import org.opentripplanner.util.TestUtils;
@@ -53,12 +56,13 @@ import org.opentripplanner.util.model.EncodedPolyline;
 public class ScheduledDeviatedTripTest extends FlexTest {
 
   static Graph graph;
+  static TransitModel transitModel;
 
   float delta = 0.01f;
 
   @Test
   public void parseCobbCountyAsScheduledDeviatedTrip() {
-    var flexTrips = graph.flexTripsById.values();
+    var flexTrips = transitModel.getAllFlexTrips();
     assertFalse(flexTrips.isEmpty());
     assertEquals(72, flexTrips.size());
 
@@ -73,7 +77,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       .stream()
       .filter(s -> s.getId().getId().equals("cujv"))
       .findFirst()
-      .get();
+      .orElseThrow();
     assertEquals(33.85465, stop.getLat(), delta);
     assertEquals(-84.60039, stop.getLon(), delta);
 
@@ -82,7 +86,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       .stream()
       .filter(s -> s.getId().getId().equals("zone_3"))
       .findFirst()
-      .get();
+      .orElseThrow();
     assertEquals(33.825846635310214, flexZone.getLat(), delta);
     assertEquals(-84.63430143459385, flexZone.getLon(), delta);
   }
@@ -92,9 +96,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
 
-    var accesses = trip
-      .getFlexAccessTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var accesses = trip.getFlexAccessTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(3, accesses.size());
 
@@ -107,9 +109,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
   public void calculateEgressTemplate() {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
-    var egresses = trip
-      .getFlexEgressTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var egresses = trip.getFlexEgressTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(3, egresses.size());
 
@@ -128,6 +128,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
 
     var router = new FlexRouter(
       graph,
+      new DefaultTransitService(transitModel),
       new FlexParameters(300),
       OffsetDateTime.parse("2021-11-12T10:15:24-05:00").toInstant(),
       false,
@@ -137,15 +138,14 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       List.of(to)
     );
 
-    var itineraries = router.createFlexOnlyItineraries();
+    var filter = new FaresFilter(graph.getService(FareService.class));
+
+    var itineraries = filter.filter(router.createFlexOnlyItineraries().stream().toList());
 
     var itinerary = itineraries.iterator().next();
     assertFalse(itinerary.getFare().fare.isEmpty());
 
-    assertEquals(
-      new Money(new WrappedCurrency("USD"), 250),
-      itinerary.getFare().getFare(FareType.regular)
-    );
+    assertEquals(Money.usDollars(250), itinerary.getFare().getFare(FareType.regular));
 
     OTPFeature.enableFeatures(Map.of(OTPFeature.FlexRouting, false));
   }
@@ -158,10 +158,9 @@ public class ScheduledDeviatedTripTest extends FlexTest {
    */
   @Test
   public void flexTripInTransitMode() {
-    var feedId = graph.getFeedIds().iterator().next();
+    var feedId = transitModel.getFeedIds().iterator().next();
 
-    var router = new Router(graph, RouterConfig.DEFAULT, Metrics.globalRegistry);
-    router.startup();
+    var serverContext = TestServerContext.createServerContext(graph, transitModel);
 
     // from zone 3 to zone 2
     var from = GenericLocation.fromStopId("Transfer Point for Route 30", feedId, "cujv");
@@ -171,7 +170,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       "yz85"
     );
 
-    var itineraries = getItineraries(from, to, router);
+    var itineraries = getItineraries(from, to, serverContext);
 
     assertEquals(2, itineraries.size());
 
@@ -202,8 +201,8 @@ public class ScheduledDeviatedTripTest extends FlexTest {
    */
   @Test
   public void shouldNotInterpolateFlexTimes() {
-    var feedId = graph.getFeedIds().iterator().next();
-    var pattern = graph.tripPatternForId.get(new FeedScopedId(feedId, "090z:0:01"));
+    var feedId = transitModel.getFeedIds().iterator().next();
+    var pattern = transitModel.getTripPatternForId(new FeedScopedId(feedId, "090z:0:01"));
 
     assertEquals(3, pattern.numberOfStops());
 
@@ -224,13 +223,15 @@ public class ScheduledDeviatedTripTest extends FlexTest {
 
   @BeforeAll
   static void setup() {
-    graph = FlexTest.buildFlexGraph(COBB_FLEX_GTFS);
+    TestOtpModel model = FlexTest.buildFlexGraph(COBB_FLEX_GTFS);
+    graph = model.graph();
+    transitModel = model.transitModel();
   }
 
   private static List<Itinerary> getItineraries(
     GenericLocation from,
     GenericLocation to,
-    Router router
+    OtpServerContext serverContext
   ) {
     RoutingRequest request = new RoutingRequest();
     Instant dateTime = TestUtils.dateInstant("America/New_York", 2021, 12, 16, 12, 0, 0);
@@ -243,7 +244,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
 
     var result = TransitRouter.route(
       request,
-      router,
+      serverContext,
       time,
       additionalSearchDays,
       new DebugTimingAggregator()
@@ -252,11 +253,11 @@ public class ScheduledDeviatedTripTest extends FlexTest {
     return result.getItineraries();
   }
 
-  private static NearbyStop getNearbyStop(FlexTrip trip) {
+  private static NearbyStop getNearbyStop(FlexTrip<?, ?> trip) {
     return getNearbyStop(trip, "nearby-stop");
   }
 
-  private static NearbyStop getNearbyStop(FlexTrip trip, String id) {
+  private static NearbyStop getNearbyStop(FlexTrip<?, ?> trip, String id) {
     // getStops() returns a set of stops and the order doesn't correspond to the stop times
     // of the trip
     var stopLocation = trip
@@ -264,7 +265,7 @@ public class ScheduledDeviatedTripTest extends FlexTest {
       .stream()
       .filter(s -> s instanceof FlexStopLocation)
       .findFirst()
-      .get();
+      .orElseThrow();
     var r = new RoutingRequest();
     try (var temporaryVertices = new TemporaryVerticesContainer(graph, r)) {
       RoutingContext routingContext = new RoutingContext(r, graph, temporaryVertices);
@@ -273,15 +274,14 @@ public class ScheduledDeviatedTripTest extends FlexTest {
         stopLocation,
         0,
         List.of(),
-        null,
         new State(new StreetLocation(id, new Coordinate(0, 0), id), r, routingContext)
       );
     }
   }
 
-  private static FlexTrip getFlexTrip() {
-    var feedId = graph.getFeedIds().iterator().next();
+  private static FlexTrip<?, ?> getFlexTrip() {
+    var feedId = transitModel.getFeedIds().iterator().next();
     var tripId = new FeedScopedId(feedId, "a326c618-d42c-4bd1-9624-c314fbf8ecd8");
-    return graph.flexTripsById.get(tripId);
+    return transitModel.getFlexTrip(tripId);
   }
 }
