@@ -8,11 +8,12 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.opentripplanner.TestOtpModel;
 import org.opentripplanner.ext.flex.trip.FlexTrip;
 import org.opentripplanner.ext.flex.trip.UnscheduledTrip;
-import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graphfinder.NearbyStop;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
+import org.opentripplanner.transit.service.TransitModel;
 
 /**
  * This test makes sure that one of the example feeds in the GTFS-Flex repo works. It's the City of
@@ -24,11 +25,11 @@ import org.opentripplanner.transit.model.framework.FeedScopedId;
  */
 public class UnscheduledTripTest extends FlexTest {
 
-  static Graph graph;
+  static TransitModel transitModel;
 
   @Test
   public void parseAspenTaxiAsUnscheduledTrip() {
-    var flexTrips = graph.flexTripsById.values();
+    var flexTrips = transitModel.getAllFlexTrips();
     assertFalse(flexTrips.isEmpty());
     assertEquals(
       Set.of("t_1289262_b_29084_tn_0", "t_1289257_b_28352_tn_0"),
@@ -46,9 +47,7 @@ public class UnscheduledTripTest extends FlexTest {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
 
-    var accesses = trip
-      .getFlexAccessTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var accesses = trip.getFlexAccessTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(1, accesses.size());
 
@@ -61,9 +60,7 @@ public class UnscheduledTripTest extends FlexTest {
   public void calculateEgressTemplate() {
     var trip = getFlexTrip();
     var nearbyStop = getNearbyStop(trip);
-    var egresses = trip
-      .getFlexEgressTemplates(nearbyStop, flexDate, calculator, params)
-      .collect(Collectors.toList());
+    var egresses = trip.getFlexEgressTemplates(nearbyStop, flexDate, calculator, params).toList();
 
     assertEquals(1, egresses.size());
 
@@ -74,17 +71,18 @@ public class UnscheduledTripTest extends FlexTest {
 
   @BeforeAll
   static void setup() {
-    graph = FlexTest.buildFlexGraph(ASPEN_GTFS);
+    TestOtpModel model = FlexTest.buildFlexGraph(ASPEN_GTFS);
+    transitModel = model.transitModel();
   }
 
-  private static NearbyStop getNearbyStop(FlexTrip trip) {
+  private static NearbyStop getNearbyStop(FlexTrip<?, ?> trip) {
     assertEquals(1, trip.getStops().size());
     var stopLocation = trip.getStops().iterator().next();
-    return new NearbyStop(stopLocation, 0, List.of(), null, null);
+    return new NearbyStop(stopLocation, 0, List.of(), null);
   }
 
-  private static FlexTrip getFlexTrip() {
-    var flexTrips = graph.flexTripsById.values();
+  private static FlexTrip<?, ?> getFlexTrip() {
+    var flexTrips = transitModel.getAllFlexTrips();
     return flexTrips.iterator().next();
   }
 }
